--- a/ASSIGNMENT_4/latex source codes/Assignment4.tex
+++ b/ASSIGNMENT_4/latex source codes/Assignment4.tex
@@ -169,8 +169,21 @@ columns=fullflexible
 
 \maketitle
 
+Download python codes used in this question from:
 
-\maketitle
+\begin{lstlisting}
+  https://github.com/TushitaSharva/PRV_2022/tree/main/ASSIGNMENT_4/python%20codes
+\end{lstlisting}
+
+Download Latex source code of this pdf from: 
+\begin{lstlisting}
+    https://github.com/TushitaSharva/PRV_2022/tree/main/ASSIGNMENT_4/latex%20source%20codes
+\end{lstlisting}
+
+Download images in this pdf from: 
+\begin{lstlisting}
+    https://github.com/TushitaSharva/PRV_2022/tree/main/ASSIGNMENT_4/Images
+\end{lstlisting}
 
 \begin{abstract}
 This assignment contains the solution to the question number 13 from the Chapter PROBABILITY, from class 12 CBSE board syllabus.
