--- a/ASSIGNMENT_4/latex source codes/LatexBeamer_Assign4.tex
+++ b/ASSIGNMENT_4/latex source codes/LatexBeamer_Assign4.tex
@@ -1,6 +1,7 @@
 \documentclass{beamer}
 \usepackage{amssymb}
 \usepackage{amsthm}
+\usepackage{hyperref}
 \usetheme{CambridgeUS}
 \providecommand{\mbf}{\mathbf}
 \providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
@@ -173,6 +174,21 @@ Using the general formula for conditional probability, we have
     Therefore, the probability that the question will be an easy one, given that it is a multiple choice question is $\displaystyle\frac{5}{9}$.
 \end{block}
 
+\end{frame}
+
+\begin{frame}{Source codes}
+    \begin{block}{To download latex source code of this presentation at}
+        \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_4/main(beamer).pdf}{Click Here}
+    \end{block}
+    
+    \begin{block}{To download the images used in this presentation at}
+        \href{https://github.com/TushitaSharva/PRV_2022/tree/main/ASSIGNMENT_4/Images}{Click here}
+    \end{block}
+    
+    \begin{block}{To download python codes used to generate graphs in this presentation from:}
+        \href{https://github.com/TushitaSharva/PRV_2022/tree/main/ASSIGNMENT_4/python codes}{Click here}
+    \end{block}
+    
 \end{frame}
 
 \end{document}
