--- a/ASSIGNMENT_4/latex source codes/LatexBeamer_Assign4.tex
+++ b/ASSIGNMENT_4/latex source codes/LatexBeamer_Assign4.tex
@@ -178,7 +178,7 @@ Using the general formula for conditional probability, we have
 
 \begin{frame}{Source codes}
     \begin{block}{To download latex source code of this presentation at}
-        \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_4/main(beamer).pdf}{Click Here}
+        \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_4/latex source codes/LatexBeamer_Assign4.tex}{Click Here}
     \end{block}
     
     \begin{block}{To download the images used in this presentation at}
