--- a/ASSIGNMENT_8/mainBeamer.tex
+++ b/ASSIGNMENT_8/mainBeamer.tex
@@ -93,15 +93,15 @@ Further more, we have
 
 \begin{frame}{Source codes}
     \begin{block}{Download Latex source code of this pdf from:}
-       \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_5/LatexBeamer_Assign5}{Click Here}
+       \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_8/mainBeamer.tex}{Click Here}
     \end{block}
     
     \begin{block}{Download document of this presentation at:}
-       \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_5/mainDoc.pdf}{Click Here}
+       \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_8/mainDoc.pdf}{Click Here}
     \end{block}
     
     \begin{block}{To download this presentation, visit:}
-        \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_5/mainBeamer.pdf}{Click here}
+        \href{https://github.com/TushitaSharva/PRV_2022/blob/main/ASSIGNMENT_8/mainBeamer.pdf}{Click here}
     \end{block}
     
 \end{frame}
